# NFL_Big_Data_Bowl_2025

./: .gitignore  README.md  pyproject.toml
.config/: requirements.txt
data/: test.erd
docs/: _quarto.yml  nfl_bowl_2025.qmd  nfl_data_bowl_25.qmd
nfl_dbt/: dbt_project.yml
nfl_dbt/models/: sources.yml
nfl_dbt/models/load/: plays_numeric.sql  yards_by_formation.sql
nfl_dbt/models/transform/: agg_play_expand_test.sql  plays_agg.sql  plays_rf.sql  plays_rf_features.sql
notebooks/: 1.md  2.ipynb  2.md  eda.ipynb  knn.ipynb  linreg.ipynb  rf.ipynb  rf_basic.ipynb
notes/: plays_numeric.parquet
scripts/: table_sql.sh
scripts/ddl/: agg_play_summary_source.sql  games_source.sql  player_play_source.sql  players_source.sql  plays_source.sql  tracking_week_1_source.sql  tracking_week_2_source.sql  tracking_week_3_source.sql  tracking_week_4_source.sql  tracking_week_5_source.sql  tracking_week_6_source.sql  tracking_week_7_source.sql  tracking_week_8_source.sql  tracking_week_9_source.sql  yards_by_formation_source.sql
scripts/files/: tables.csv
