[project]
name = "nfl-big-data-bowl-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt>=1.0.0.38.22",
    "duckdb>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
